<resources>
    <string name="app_name">সকাল ও সন্ধ্যার আমল</string>

    <string name="heading1">সাইয়্যিদুল ইস্তিগফার বা ক্ষমা প্রার্থনার সর্বশ্রেষ্ঠ দুআ</string>

    <string name="amol1">
    ‎اللَّهُمَّ أَنْتَ رَبِّي لَّا إِلَهَ إِلَّا أَنْتَ، خَلَقْتَنِي وَأَنَا عَبْدُكَ، وَأَنَا عَلَى عَهْدِكَ وَوَعْدِكَ مَا اسْتَطَعْتُ، أَعُوذُ بِكَ مِنْ شَرِّ مَا صَنَعْتُ، أَبُوءُ لَكَ بِنِعْمَتِكَ عَلَيَّ، وَأَبُوءُ بِذَنْبِي فَاغْفِر لِي فَإِنَّهُ لَا يَغْفِرُ الذُّنُوبَ إِلَّا أَنْتَ
    </string>

    <string name="arabic_pro1">
আল্লাহুম্মা আনতা রাব্বি লা-ইলাহা ইল্লা আনতা, খালাক্বতানি ওয়া আনা আ’বদুক, ওয়া আনা-আ’লা আহ’দিকা ওয়া-ওয়াদিকা মাস্তা-তোয়া’ত, আ’উযুবিকা মিন শাররি মা-ছানাআ’ত আবু-উ-লাকা বিনি’মাতিকা আলায়্যা ওয়া-আবু-উ-বি-যামবি, ফাগফিরলী, ফা-ইন্নাহু লা ইয়াগফিরুযযুনুবা ইল্লা-আনতা।
    </string>

    <string name="meaning1">
        হে আল্লাহ! তুমি আমার প্রতিপালক, তুমি ছাড়া আর কোন উপাস্য নেই।
        তুমি আমাকে সৃষ্টি করেছো আর আমি তোমার বান্দা।
        আমি আমার সাধ্যানুযায়ী তোমার সাথে যে ওয়াদা করেছি তা পূরণ করার চেষ্টায় রত আছি, আমি আমার কর্মের অনিষ্ট থেকে পানাহ্ চাই,
        আমি স্বীকার করছি আমার প্রতি তোমার প্রদত্ত নিয়ামতের কথা এবং আমি আরো স্বীকার করছি আমার পাপে আমি অপরাধী,
        অতএব তুমি আমাকে ক্ষমা করো, তুমি ছাড়া ক্ষমা করার আর কেউ নাই।
    </string>


    <string name="heading2">
জান্নাত প্রার্থনা করা ও জাহান্নাম থেকে আশ্রয় চাওয়ার দুয়াঃ ৩ বার
    </string>

    <string name="amol2">
اللَّهُمَّ إِنِّي أَسْأَلُكَ الْجَنَّةَ وَأَعُوذُ بِكَ مِنَ النَّارِ
    </string>

    <string name="arabic_pro2">
আল্লা-হুম্মা ইন্নী আসআলুকাল জান্নাতা ওয়া আ’উযু বিকা মিনান্নার।
    </string>

    <string name="meaning2">
হে আল্লাহ! আমি আপনার কাছে জান্নাত চাই এবং জাহান্নাম থেকে আপনার কাছে আশ্রয় চাই।
রাসুলুল্লাহ (সাঃ) বলেছেনঃ “যে ব্যক্তি আল্লাহর কাছে ৩ বার জান্নাত প্রার্থনা করে, জান্নাত আল্লাহর কাছে দুয়া করে, হে আল্লাহ তাকে জান্নাত দান করো।
    </string>




    <string name="heading3">
কিয়ামতের দিন আল্লাহর সন্তুষ্টি বা জান্নাত পাওয়ার জন্য সহজ আমলঃ ৩ বার
    </string>

    <string name="amol3">
‎رَضِيْتُ بِاللهِ رَبـاًّ، وَبِاْلإِسْلاَمِ دِيْنـًا، وَبِمُحَمَّدٍ نَبِيـًّا

    </string>
    <string name="arabic_pro3">
 রদ্বীতু বিল্লা-হি রব্বান, ওয়াবিল ইসলা-মি দ্বীনান, ওয়াবি মুহা’ম্মাদিন সাল্লাল্লা-হু আ’লাইহি ওয়া সাল্লামা নাবিয়্যান। (৩ বার)
    </string>
    <string name="meaning3">
 আমি আল্লাহকে রব হিসাবে, ইসলামকে দ্বীন হিসাবে ও মুহাম্মাদ সাল্লাল্লাহু আলাইহি ওয়াসাল্লাম-কে নবী হিসেবে গ্রহণ করে সন্তুষ্ট”।
    </string>


    <string name="heading4">
হঠাৎ কোন বিপদ-আপদ ও দুর্ঘটনা থেকে নিরাপদ থাকার জন্য আমলঃ ৩ বার
    </string>
    <string name="amol4">
        ‎بِسْمِ اللهِ الَّذِي لاَ يَضُرُّ مَعَ اسْمِهِ شَيْءٌ فِي الأَرْضِ وَلاَ فِي السَّمَاءِ وَهُوَ السَّمِيعُ العَلِيمُ
    </string>

    <string name="arabic_pro4">
বিসমিল্লা-হিল্লাযী লা ইয়াদুররু মা আ’সমিহী শাই’উন ফিল আরদি, ওয়ালা ফিস সামা-য়ী, ওয়াহুয়াস সামীউ’ল আ’লীম। (৩ বার)।
    </string>

    <string name="meaning4">
আমি সেই আল্লাহর নামে শুরু করছি, যার নামে শুরু করলে আসমান ও যমীনের কোনো কিছুই কোনো ক্ষতি করতে পারেনা। প্রকৃতপক্ষে তিনি সর্বশ্রোতা, মহাজ্ঞানী।
    </string>
 //////////////555555//////////////
    <string name="heading5">
নিয়া ও আখেরাতের যেকোনো টেনশান বা দুঃচিন্তা এবং মানসিক অস্থিরতা থেকে বেঁচে থাকার জন্য আমলঃ ৭ বার
    </string>
    <string name="amol5">
حَسْبِيَ اللهُ لاَ إِلَهَ إِلاَّ هُوَ عَلَيْهِ تَوَكَّلْتُ وَهُوَ رَبُّ الْعَرْشِ الْعَظِيْمِ
    </string>
    <string name="arabic_pro5">
 হা’সবিয়াল্লাহু লা-ইলাহা ইল্লা-হুয়া, আ’লাইহি তাওয়াক্কালতু, ওয়া হুয়া রব্বুল আ’রশিল আ’যীম।
    </string>

    <string name="meaning5">
 আল্লাহই আমার জন্য যথেষ্ট, তিনি ছাড়া আর কোন মা’বুদ নাই, আমি তাঁরই উপর নির্ভর করছি, তিনি মহান আরশের প্রভু।
    </string>
////////////////////666666666666666////////////////////
    <string name="heading6">
ছোট বড় সব গুনাহ থেকে মাফ চাইতে দুআ:
(সালামের আগে শেষ তাশাহহুদে পরবেন)
    </string>
    <string name="amol6">
اللَّهُمَّ اغْفِرْ لِي مَا قَدَّمْتُ، وَمَا أَخَّرْتُ، وَمَا أَسْرَرْتُ، وَمَا أَعْلَنْتُ، وَمَا أَسْرَفْتُ، وَمَا أَنْتَ أَعْلَمُ بِهِ مِنِّي، أَنْتَ الْمُقَدِّمُ، وَأَنْتَ الْمُؤَخِّرُ لاَ إِلَهَ إِلاَّ أَنْتَ
    </string>

    <string name="arabic_pro6">
আল্লা-হুম্মাগফিরলী মা ক্বাদ্দামতু ওয়া মা আখ্‌খারতু ওয়া মা আসরারতু ওয়া মা আ’লান্তু ওয়া মা আসরাফ্‌তু ওয়া মা আনতা আল’লামু বিহী মিন্নী। আনতাল মুকাদ্দিমু ওয়া আনতাল মুআখখিরু লা ইলাহা ইল্লা আনতা
    </string>

    <string name="meaning6">
হে আল্লাহ! ক্ষমা করে দিন আমার গুনাহসমূহ— যা পূর্বে করেছি, যা পরে করেছি, যা আমি গোপন করেছি, যা প্রকাশ্যে করেছি, যা সীমালঙ্ঘন করে করেছি, আর যা আপনি আমার চেয়ে বেশি জানেন। আপনিই (কাউকে) করেন অগ্রগামী, আর আপনিই (কাউকে) করেন পশ্চাদগামী, আপনি ব্যতীত আর কোনো হক্ব ইলাহ নেই।
    </string>

    //////////////////77777777777777/////////////////////

    <string name="heading7">
 ঘুমাচ্ছেন, ঘুম যখন ভেঙ্গে যাবে---- তখন এইটা পড়ে নিবেন--
    </string>
    <string name="amol7">

« ﻻَ ﺇِﻟَﻪَ ﺇِﻻَّ ﺍﻟﻠَّﻪُ ﻭَﺣْﺪَﻩُ ﻻَ ﺷَﺮﻳﻚَ ﻟَﻪُ، ﻟَﻪُ ﺍﻟْﻤُﻠْﻚُ ﻭَﻟَﻪُ ﺍﻟْﺤَﻤْﺪُ، ﻭَﻫُﻮَ ﻋَﻠَﻰ ﻛُﻞِّ ﺷَﻲْﺀٍ ﻗَﺪِﻳﺮٌ، ﺳُﺒْﺤَﺎﻥَ ﺍﻟﻠَّﻪِ، ﻭَﺍﻟْﺤَﻤْﺪُ ﻟﻠَّﻪِ، ﻭَﻻَ ﺇِﻟَﻪَ ﺇِﻻَّ ﺍﻟﻠَّﻪُ، ﻭَﺍﻟﻠَّﻪُ ﺃَﻛﺒَﺮُ، ﻭَﻻَ ﺣَﻮْﻝَ ﻭَﻻَ ﻗُﻮَّﺓَ ﺇِﻻَّ ﺑِﺎﻟﻠَّﻪِ ﺍﻟْﻌَﻠِﻲِّ ﺍﻟْﻌَﻈِﻴﻢِ ‏» ‏« ﺭَﺏِّ ﺍﻏْﻔﺮْ ﻟِﻲ ».
    </string>

    <string name="arabic_pro7">
লা~ ইলা-হা ইল্লাল্লা-হু ওয়াহ্দাহূ লা- শারীকা লাহূ, লাহুল মুলকু, ওয়া লাহুল হামদু, ওয়া হুয়া ‘আলা কুল্লি শাইয়িন ক্বদীর। সুবহা-নাল্লাহি, ওয়ালহামদুলিল্লাহি, ওয়া লা~ ইলা-হা ইল্লাল্লা-হু, ওয়াল্লা-হু আকবার, ওয়া লা- হাওলা ওয়ালা- কুওয়াতা ইল্লা-বিল্লা-হিল ‘আলিয়্যিল ‘আযীম, রাব্বিগফির লী
    </string>

    <string name="meaning7">
“একমাত্র আল্লাহ ছাড়া কোনো হক্ব ইলাহ নেই, তাঁর কোনো শরীক নেই; রাজত্ব তাঁরই, প্রশংসাও তাঁরই; আর তিনি সকল কিছুর ওপর ক্ষমতাবান। আল্লাহ পবিত্র-মহান। সকল হামদ-প্রশংসা আল্লাহ্র। আল্লাহ ছাড়া কোনো হক্ব ইলাহ নেই। আল্লাহ সবচেয়ে বড়। সুউচ্চ সুমহান আল্লাহর সাহায্য ছাড়া (পাপ কাজ থেকে দূরে থাকার) কোনো উপায় এবং (সৎকাজ করার) কোনো শক্তি কারো নেই। হে রব্ব ! আমাকে ক্ষমা করুন”।
    </string>

    //////////////88888888888//////////////////

    <string name="heading8">
প্রত্যেক সকাল ও সন্ধ্যায় সাইয়িদুল ইস্তিগফার
পড়া
    </string>
   <string name="amol8">
ﺍَﻟﻠَّﻬُﻢَّ ﺃَﻧْﺖَ ﺭَﺑِّﻰْ ﻵ ﺇِﻟﻪَ ﺇﻻَّ ﺃَﻧْﺖَ ﺧَﻠَﻘْﺘَﻨِﻰْ ﻭَﺃَﻧَﺎ ﻋَﺒْﺪُﻙَ ﻭَﺃَﻧَﺎ ﻋَﻠﻰ ﻋَﻬْﺪِﻙَ ﻭَﻭَﻋْﺪِﻙَ ﻣَﺎ
ﺍﺳْﺘَﻄَﻌْﺖُ، ﺃَﻋُﻮْﺫُﺑِﻚَ ﻣِﻦْ ﺷَﺮِّﻣَﺎ ﺻَﻨَﻌْﺖُ، ﺃﺑُﻮْﺀُ ﻟَﻚَ ﺑِﻨِﻌْﻤَﺘِﻚَ ﻋَﻠَﻰَّ ﻭَﺃَﺑُﻮْﺀُ ﺑِﺬَﻧْﺒِﻰْ
ﻓَﺎﻏْﻔِﺮْﻟِﻰْ، ﻓَﺈِﻧَّﻪُ ﻻَﻳَﻐْﻔِﺮُ ﺍﻟﺬُّﻧُﻮْﺏَ ﺇِﻻَّ ﺃَﻧْﺖَ -

    </string>

    <string name="arabic_pro8">
 আল্লা-হুম্মা আনতা রববী লা ইলা-হা ইল্লা
আনতা খলাক্বতানী, ওয়া আনা ‘আবদুকা ওয়া আনা
‘আলা ‘আহদিকা ওয়া ওয়া‘দিকা মাসতাত্বা‘তু,
আ‘ঊযুবিকা মিন শাররি মা সানা‘তু। আবূউ লাকা
বিনি‘মাতিকা ‘আলাইয়া ওয়া আবূউ বি যাম্বী
ফাগফিরলী ফা ইন্নাহূ লা~ ইয়াগফিরুয্ যুনূবা ইল্লা
আনতা।

    </string>
    <string name="meaning8">
রাসূলুল্লাহ (সঃ) বলেন, ‘যে ব্যক্তি দৃঢ় বিশ্বাসের
সাথে এই দো‘আ পাঠ করবে, দিনে পাঠ করে রাতে
মারা গেলে কিংবা রাতে পাঠ করে দিনে মারা
গেলে, সে জান্নাতী হবে’।
    </string>

    ///////////////////////////////////END///////////////////

    <string name="pronunciation">উচ্চারণ</string>
    <string name="answer1">অর্থ</string>
    <string name="fojilot">ফজিলত</string>

    <string name="buttonl">সকাল ও সন্ধ্যার আমল ১</string>
    <string name="button2">সকাল ও সন্ধ্যার আমল ২</string>
    <string name="button3">সকাল ও সন্ধ্যার আমল ৩</string>
    <string name="button4">সকাল ও সন্ধ্যার আমল ৪</string>
    <string name="button5">সকাল ও সন্ধ্যার আমল ৫</string>
    <string name="button6">সকাল ও সন্ধ্যার আমল ৬</string>
    <string name="button7">সকাল ও সন্ধ্যার আমল ৭</string>
    <string name="button8">সকাল ও সন্ধ্যার আমল ৮</string>
</resources>
