<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/content1"
    android:padding="8dp"
    android:background="#EEE6D7">
    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/backButton3"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:background="@drawable/button_pressed"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:src="@drawable/eoms" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=" Back"
                android:textColor="@android:color/background_dark"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:background="@drawable/button_pressed"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/name3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/app_name"
                android:textColor="@android:color/background_dark"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollView3"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout"
        tools:ignore="MissingConstraints">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/amol1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/heading3"
                android:textColor="@color/colorAccent"
                android:textIsSelectable="true"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <com.codesgood.views.JustifiedTextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/amol3"
                android:textColor="@android:color/black"
                android:textIsSelectable="true"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView1" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/pronunciation"
                android:textColor="@color/colorPrimary"
                android:textIsSelectable="true"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/textView4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:padding="5dp"
                android:text="@string/arabic_pro3"
                android:textColor="@android:color/black"
                android:textIsSelectable="true"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/answer1"
                android:textColor="@color/light_green"
                android:textIsSelectable="true"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/textView6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="134dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/meaning3"
                android:textColor="@android:color/black"
                android:textIsSelectable="true"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />
        </android.support.constraint.ConstraintLayout>


    </ScrollView>


</android.support.constraint.ConstraintLayout>